Remove clearing todo list. And Update schedule, trainerSchedule id to each table.
