# config/swagger.yaml
@@ -950,6 +950,9 @@ definitions:
       trainer_id: #FK
         type: "integer"
         format: "int64"
+      schedule_id:
+        type: integer
+        format: int64
 
   Student:
     type: "object"
@@ -1054,9 +1057,12 @@ definitions:
       trainer_id:
         type: "integer"
         format: "int64"
-      PT_id: #FK
+      pt_id: #FK
         type: "integer"
         format: "int64"
+      trainer_schedule_id:
+        type: integer
+        format: int64
 
   Banner:
     type: object
